--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="rep/cssacuiel.css">
+    <link rel="stylesheet" href="monrep/cssacuiel.css">
     
 </head>
 <body>
@@ -27,7 +27,7 @@
                 <a class="nav-link active fw-bold px-4" aria-current="page" href="#">ACCUIEL</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-4"  href="rep/ind.html">NOS VÉHICULES</a>
+                <a class="nav-link px-4"  href="monrep/ind.html">NOS VÉHICULES</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle fw-bold px-4" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -43,7 +43,7 @@
               </li>
               <li class="nav-item">
                <!---- <a class="nav-link disabled fw-bold" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-               <a class="nav-link px-4" href="rep/contact.html">CONTACT</a>
+               <a class="nav-link px-4" href="monrep/contact.html">CONTACT</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -280,21 +280,21 @@
             <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
           </svg></button></div>-->
             <div class="carte">
-                <img src="rep/c3.png" alt="">
+                <img src="monrep/c3.png" alt="">
                 <h3 class="spa">CITROËN C3</h3>
                 <p>A partire de : <span>280 MAD</span> jour</p>
             </div>
-            <div class="carte"><img src="rep/dacialogan.png" alt="dacia">
+            <div class="carte"><img src="monrep/dacialogan.png" alt="dacia">
               <h3 class="spa">DACIA LOGAN</h3>
               <p>A partire de : <span>250 MAD</span> jour</p>
             </div>
             <div class="carte">
-              <a href="rep/ind.html#clio_4"> <img src="rep/clio5.png" alt="clio5"></a>
+              <a href="rep/ind.html#clio_4"> <img src="monrep/clio5.png" alt="clio5"></a>
                <h3 class="spa" >RENAULT CLIO 5</h3>
                <p>A partire de : <span>280 MAD</span> jour</p>
              </div>
             <div class="carte">
-              <a href=""><img src="rep/ford.jpg" alt="...."></a>
+              <a href=""><img src="monrep/ford.jpg" alt="...."></a>
               <h3 class="spa">FORD FIESTA</h3>
               <p>A partire de : <span>250 MAD</span> jour</p>
             </div>
@@ -308,22 +308,22 @@
           <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
         </svg></button></div>
         <div class="carte">
-          <a href=""><img src="rep/range-evoque.png" alt="range-evoque"></a>
+          <a href=""><img src="monrep/range-evoque.png" alt="range-evoque"></a>
           <h3 class="spa">RANGE EVOQUE</h3>
           <p>A partire de : <span>900 MAD</span> jour</p>
         </div>
         <div class="carte">
-          <a href=""> <img src="rep/touareg1.png" width="80%"height="100px" alt="touareg"></a>
+          <a href=""> <img src="monrep/touareg1.png" width="80%"height="100px" alt="touareg"></a>
           <h3 class="spa" style="font-size: 20px;">VOLKSWAGEN TOUAREG</h3>
           <p>A partire de : <span>900 MAD</span> jour</p>
         </div>
         <div class="carte">
-          <a href=""> <img src="rep/Duster.png" alt="...."></a>
+          <a href=""> <img src="monrep/Duster.png" alt="...."></a>
           <h3 class="spa">Dacia Duster</h3>
           <p>A partire de : <span>550 MAD</span> jour</p>
         </div>
         <div class="carte">
-          <a href=""> <img src="rep/audi.png" alt="...."></a>
+          <a href=""> <img src="monrep/audi.png" alt="...."></a>
           <h3 class="spa">Audi Q5</h3>
           <p>A partire de : <span>550 MAD</span> jour</p>
         </div>
@@ -338,22 +338,22 @@
       <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223z"/>
     </svg></button></div>
     <div class="carte">
-      <a href=""><img src="rep/golf8.png" alt="range-evoque"></a>
+      <a href=""><img src="monrep/golf8.png" alt="range-evoque"></a>
       <h3 class="spa">Golf 8 TDI</h3>
       <p>A partire de : <span>900 MAD</span> jour</p>
     </div>
     <div class="carte">
-      <a href=""> <img src="rep/classA.png" alt="...."></a>
+      <a href=""> <img src="monrep/classA.png" alt="...."></a>
       <h3 class="spa">Mercedes Class A </h3>
       <p>A partire de : <span>900 MAD</span> jour</p>
     </div>
     <div class="carte">
-       <a href=""> <img src="rep/cla.png" width="80%"height="100px" alt="touareg"></a>
+       <a href=""> <img src="monrep/cla.png" width="80%"height="100px" alt="touareg"></a>
       <h3 class="spa" style="font-size: 20px;">Mercedes CLA 200</h3>
       <p>A partire de : <span>900 MAD</span> jour</p>
     </div>
     <div class="carte">
-      <a href=""> <img src="rep/classC.png" alt="class C"></a>
+      <a href=""> <img src="monrep/classC.png" alt="class C"></a>
       <h3 class="spa">Mercedes Class C</h3>
       <p>A partire de : <span>900MAD</span> jour</p>
     </div>
@@ -424,8 +424,8 @@
      
     </div>
     <!--***********************************script js******************-->
-    <script src="rep/java.js"></script>
-    <script src="rep/script.js"></script>
+    <script src="monrep/java.js"></script>
+    <script src="monrep/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
